<resources>
    <string name="app_name">StudentChat</string>
    <string name="screen_tag">Chat with friends, share images and videos</string>
    <string name="signup">SignUp</string>
    <string name="login">logIn</string>

    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="User">USER</string>
    <string name="firstName">firstname</string>
    <string name="lastName">lastname</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="id">id</string>


    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginStart">20dp</item>
        <item name="android:layout_marginTop">10dp</item>
        <item name="android:layout_marginEnd">20dp</item>

    </style>
</resources>
