<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/registerBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/backarrow"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"
                app:tint="@color/primary"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:fontFamily="@font/robotobold"
                android:textColor="@color/primary"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up to continue chatting with friends within school"
                android:fontFamily="@font/robotoregular"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="9"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:padding="15dp"
                android:background="@android:color/holo_orange_light"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Login"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotobold"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>